--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Inventory C Team 1</title>
 </head>
 <body>
+    <div class="main-container">
+        <div id="0" class="item-container"></div>
+        <div id="1" class="item-container"></div>
+        <div id="2" class="item-container"></div>
+        <div id="3" class="item-container"></div>
+        <div id="4" class="item-container"></div>
+        <div id="5" class="item-container"></div>
+        <div id="6" class="item-container"></div>
+        <div id="7" class="item-container"></div>
+        <div id="8" class="item-container"></div>
+        <div id="9" class="item-container"></div>
+        <div id="10" class="item-container"></div>
+        <div id="11" class="item-container"></div>
+        <div id="12" class="item-container"></div>
+        <div id="13" class="item-container"></div>
+        <div id="14" class="item-container"></div>
+        <div id="15" class="item-container"></div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
