--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
     <button class="randomize" onclick="generateRandomItems()">Randomize Items</button>
     <button class="lootAll" onclick="lootAll()">Take All</button>
     <button class="clearAll" onclick="clearAll()">Clear All</button>
+    
+    <div id="studentSignaturer">
+        <div id="ivarSign"><b>Ivar</b></div>
+        <div id="andreSign"><b>André</b></div>
+        <div id="binerSign"><i>Biner</i></div>
+        <div id="torje-sign">Torje</div>
+        <div id="pålsign">Pål</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
