--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="main" class="none">
         <div class="main-container" id="left">
+            <!-- 16 buttons med moveItem funksjoner som gir med seg selv som et argument, og nummeret til hvilket slot du klikka på -->
             <div id="L0" class="item-container" onclick="moveItem(this, 0)"></div>
             <div id="L1" class="item-container" onclick="moveItem(this, 1)"></div>
             <div id="L2" class="item-container" onclick="moveItem(this, 2)"></div>
